# Betsync_Model

./: .env.example  .gitignore  ADVANCED_FEATURES_SUMMARY.md  FINAL_STATUS.txt  README.md  RUN_PREDICTIONS.sh  analyze_profitability.py  backfill_nba_results.py  backfill_nfl_results.py  optimize_features.py  requirements.txt  run_backfill.sh  run_model_pipeline.py  run_nba_backfill.sh  run_nba_pipeline.py  run_nba_predictions.py  run_pipeline.py  show_feature_importance.py  test_model_performance.py  update_game_results.py
.github/workflows/: nba-daily-backfill.yml  nfl-tuesday-backfill.yml  retrain-models.yml  run-nba-predictions.yml  run-predictions.yml
data/: nba_enhanced_features_clean.csv  nba_historic_matchups.csv  nfl_enhanced_features_v2.csv  nfl_features_to_keep.csv  nfl_historic_matchups.csv
models/trained_models/: ml_feature_importance.csv  nba_feature_columns.json  nba_metadata.json  (+12 more)
nba_model_package/: README.md  pyproject.toml
nba_model_package/src/nba_model/: __init__.py  inference.py  metadata.py
nba_model_package/src/nba_model/artifacts/: README.md
nba_model_package/tests/: test_metadata.py
sql/: add_actual_outcomes.sql  add_nba_results_columns.sql  create_nba_predictions_table.sql  fix_prediction_correct.sql
src/: __init__.py  advanced_features.py  config.py  current_season_features.py  injury_features.py  injury_impact_weights.py  nba_advanced_features.py  nba_config.py  nba_current_season_features.py  nba_hybrid_model.py  nba_hybrid_pipeline.py  nba_injury_features.py  nba_utils.py  pure_hybrid_pipeline.py  true_hybrid_model.py  utils.py
