[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "betsync-nba-model"
version = "0.0.0"
description = "Betsync NBA hybrid model bundle and inference helpers."
authors = [
  { name = "Betsync" }
]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.2",
  "numpy>=1.24",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

